# velumia

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  SETUP.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  velumia-pm
.cursor/agents/: velumia-dev-architect.md  velumia-dev-backend.md  velumia-dev-bdd.md  velumia-dev-devops.md  velumia-dev-frontend.md  velumia-dev-langdock.md  velumia-dev-qa.md  velumia-dev-security.md  velumia-scrum-po.md  velumia-scrum-sm.md
.cursor/preferences/: basic-memory-routing.md
.github/workflows/: ci.yml
apps/desktop/: Cargo.toml  project.json  tauri.conf.json
apps/desktop/migrations/: 002_prompt_content_syntax.sql  003_agent_config.sql
apps/desktop/src/: agents.rs  authz.rs  commands.rs  db.rs  lib.rs  main.rs  prompt_runs.rs  prompts.rs  sessions.rs  state.rs  variables.rs
apps/desktop/src/langdock/: client.rs  completions.rs  mod.rs  profiles.rs
apps/desktop/tests/: agents_integration.rs  prompt_runs_integration.rs  prompts_integration.rs
apps/ui/: project.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ipc.md
e2e/bdd/: project.json
libs/: README.md
src/: App.vue  main.ts
src-tauri/: tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: authz.rs  commands.rs  keychain.rs  lib.rs  prompts.rs
src-tauri/tests/: byok_integration.rs
src/components/: DegradedBanner.vue
src/lib/: api.ts
src/views/: DashboardView.vue  SettingsView.vue
templates/chatprd/: chatprd_feature-implementation-spec.tpl.md
(+82 files in other folders)
